// To regenerate api.pb.go run `codegen -p`.
syntax = "proto3";

package ctrt;

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

option go_package = "alt-os/api/ctrt/v0";
option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// ContainerRuntime is the service advertised by ctrt.
// After a successful call to Serve the runtime can begin
// operating containers using the other service methods.
service ContainerRuntime {
	// ApiServe enables the container runtime api according to the given configuration.
	rpc ApiServe(ApiServeRequest) returns (google.protobuf.Empty) {}
	// ApiUnserve stops all containers and disables the container runtime api.
	rpc ApiUnserve(ApiUnserveRequest) returns (google.protobuf.Empty) {}
	// List gets all containers the runtime knows about.
	rpc List(ListRequest) returns (ListResponse) {}
	// QueryState gets the state of a specified container.
	rpc QueryState(QueryStateRequest) returns (google.protobuf.Empty) {}
	// Create creates a new container and begins preparing it to be started.
	rpc Create(CreateRequest) returns (google.protobuf.Empty) {}
	// Start begins running a created container.
	rpc Start(StartRequest) returns (google.protobuf.Empty) {}
	// Kill stops a running container.
	rpc Kill(KillRequest) returns (google.protobuf.Empty) {}
	// Delete removes a stopped container from the runtime.
	rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

// ApiServeRequest specifies the parameters to a ContainerRuntime.Serve call.
message ApiServeRequest {
	// The hostname to listen on.
	string hostname = 1;
	// The port to listen on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The maximum number of containers to allow.
	int64 max_containers = 4;
	// The maximum amount of memory to allow a single container to consume.
	int64 max_container_memory = 5;
}

// ApiUnserveRequest specifies the parameters to a ContainerRuntime.Unserve call.
message ApiUnserveRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
}

// ListRequest specifies the parameters to a ContainerRuntime.List call.
message ListRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
}

// ListResponse returns the result of a ContainerRuntime.List call.
message ListResponse {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	repeated string id = 4;
}

// QueryStateRequest specifies the parameters to a ContainerRuntime.QueryState call.
message QueryStateRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	string id = 4;
}

// QueryStateResponse returns the result of a ContainerRuntime.QueryState call.
message QueryStateResponse {
	// The unique id of the container.
	string oci_version = 1;
	// The unique id of the container.
	string id = 2;
	// The runtime status of the container.
	ContainerStatus status = 3;
	// The ID of the container process as seen by the host.
	int32 pid = 4;
	// The container's bundle directory.
	string bundle = 5;
	// The annotations associated with the container.
	map<string, string> annotations = 6;
}

// CreateRequest specifies the parameters to a ContainerRuntime.Create call.
message CreateRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	string id = 4;
	// The container's bundle directory.
	string bundle = 5;
}

// StartRequest specifies the parameters to a ContainerRuntime.Start call.
message StartRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	string id = 4;
}

// KillRequest specifies the parameters to a ContainerRuntime.Kill call.
message KillRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	string id = 4;
	// The kill signal to send.
	int32 signal = 5;
}

// DeleteRequest specifies the parameters to a ContainerRuntime.Delete call.
message DeleteRequest {
	// The hostname of the listening server to operate on.
	string hostname = 1;
	// The port of the listening server to operate on.
	int32 port = 2;
	// The number of seconds to timeout the request.
	int32 timeout = 3;
	// The unique id of the container.
	string container_id = 4;
}

// ContainerStatus represents the runtime state of a container.
enum ContainerStatus {
	// The container is being created.
	CREATING = 0;
	// The create operation has finished and the container has neither exited nor executed the user-specified program.
	CREATED = 1;
	// The container process has executed the user-specified program but has not exited.
	RUNNING = 2;
	// The container process has exited.
	STOPPED = 3;
}
